<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/medBlue"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:background="@color/colorPrimary"
        android:text="@string/searchTextButton"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/searchQueryEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/searchQueryEdit" />

    <EditText
        android:id="@+id/searchQueryEdit"
        android:layout_width="213dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="424dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="262dp"
        android:background="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/queryHint"
        android:inputType="textPersonName"
        android:textAlignment="gravity"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textColorHint="@color/common_google_signin_btn_text_light_pressed"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/searchButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/medCoverImg"
        android:layout_width="257dp"
        android:layout_height="233dp"
        android:layout_marginStart="77dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="32dp"
        android:background="@color/medBlue"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/searchQueryEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/med" />

    <TextView
        android:id="@+id/errorMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="182dp"
        android:layout_marginBottom="240dp"
        android:text="@string/erroMsg"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchQueryEdit" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="130dp"
        android:shadowColor="@color/colorPrimaryDark"
        android:text="@string/backButton"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/coveredByTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="16dp"
        android:text="@string/medHintText"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/providersTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButton" />

    <TextView
        android:id="@+id/providersTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/dummyProvider"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coveredByTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>